# BaseAI

./: .env  .env.autodev  .gitignore  .gittinore  Dockerfile  README.md  app.py  config.py  debug_bridge.py  evolution_data.json  main.py  mypy.ini  pandas_ta.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.py  run_diagnostics.py
analysis/: binai_analysis.txt
baseai/: __init__.py.bak  config.py  engine.py  module1.py  module2.py  utils.py
baseai/autodev/: auto_refactor.py  dual_brain_controller.py  engine.py  enterprise_loop.py  enterprise_loop.py.bak  evolution_reflector.py  evolution_reflector.py.bak  fix_all_now.py  fix_all_now.py.bak  live_refactor_watchdog.py  live_refactor_watchdog.py.bak  self_heal_loop.py  self_startup.py
baseai/bridges/: bridge_common.py  diagnostics.py  gemini.py  gpt.py  local_llm_bridge.py  vscode_bridge.py
baseai/components/: architect.py  code_auditor.py  code_generator.py  file_writer.py  intent_processor.py  planner.py
baseai/config/: fsops_policy.json
baseai/core/: __init__.py  __init__.py.bak  api_orchestrator.py  api_orchestrator.py.bak  auditor.py  code_analyzer.py  feature_flags.py  file_writer.py  intent_processor.py  (+2 more)
binai/: Dockerfile  analyzer.py  backtester.py  binai_tradelog.db  config.py  config_manager.py  db_manager.py  doctor.py  logger.py  main.py  market_data.py  optimizer.py  requirements.txt  strategy.py  strategy_ranging.py  strategy_trending.py  trade_manager.py  websocket_manager.py
temp_diag_do_not_edit/: diag_test_module.py
tests/: smoke_runtime_test.py  test_model.py.bak
(+19 files in other folders)
