[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baseai"
version = "7.1.3"
description = "BaseAI: AI üretebilen Otonom AI Çekirdeği (Enterprise+++ Seviyesi)"
# [MİGRASYON] Enterprise+++ standardı için EOL (Ömrü Sona Ermiş) Python 3.9 yerine 
# stabil ve modern Python 3.11 (veya 3.10+) gerekir.
requires-python = ">=3.11"

dependencies = [
    "python-dotenv",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "typing-extensions>=4.8",
    "google-cloud-aiplatform",
    "google-genai",
    "rich" # [P4 YÜKSELTME] Renkli loglama için eklendi
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
packages = ["baseai", "baseai.bridges", "baseai.components"]

# Linting ve formatlama ayarları Enterprise+++ standardı için korundu.
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "N", "B"]
ignore = ["E501"]